feat: tambah file

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                     <div class="col-md-4">
                         <div class="box testimonial">
                             <p class="testiname"><strong><img src="upload/testimonial_01.png" alt="" class="img-circle">
-                                    Jenny LUXURY</strong></p>
+                                    Janson M</strong></p>
                             <p>Quisque porttitor eros quis leo pulvinar, at hendrerit sapien iaculis. Donec consectetur
                                 accumsan arcu, sit amet fringilla ex ultricies.</p>
                             <div class="rating">
@@ -578,7 +578,7 @@
                     <div class="col-md-4">
                         <div class="box testimonial">
                             <p class="testiname"><strong><img src="upload/testimonial_02.png" alt="" class="img-circle">
-                                    Martin LEO</strong></p>
+                                    Tyki W</strong></p>
                             <p>Quisque porttitor eros quis leo pulvinar, at hendrerit sapien iaculis. Donec consectetur
                                 accumsan arcu, sit amet fringilla ex ultricies.</p>
                             <div class="rating">
@@ -594,7 +594,7 @@
                     <div class="col-md-4">
                         <div class="box testimonial">
                             <p class="testiname"><strong><img src="upload/testimonial_03.png" alt="" class="img-circle">
-                                    John DOE</strong></p>
+                                    Mr Pac</strong></p>
                             <p>Quisque porttitor eros quis leo pulvinar, at hendrerit sapien iaculis. Donec consectetur
                                 accumsan arcu, sit amet fringilla ex ultricies.</p>
                             <div class="rating">
@@ -752,15 +752,15 @@
                             <div class="tags-widget">
                                 <ul class="list-inline">
                                     <li><a href="#">course</a></li>
-                                    <li><a href="#">web design</a></li>
-                                    <li><a href="#">development</a></li>
-                                    <li><a href="#">language</a></li>
-                                    <li><a href="#">teacher</a></li>
-                                    <li><a href="#">speaking</a></li>
-                                    <li><a href="#">material</a></li>
-                                    <li><a href="#">css3</a></li>
-                                    <li><a href="#">html</a></li>
-                                    <li><a href="#">learning</a></li>
+                                    <li><a href="#">Beat Maker</a></li>
+                                    <li><a href="#">Video Maker</a></li>
+                                    <li><a href="#">Raggae</a></li>
+                                    <li><a href="#">Hip-Hop</a></li>
+                                    <li><a href="#">Raggae Daerah</a></li>
+                                    <li><a href="#">Wamena Music</a></li>
+                                    <li><a href="#">LA NAIKE 69</a></li>
+                                    <li><a href="#">KURIMA WAMENA</a></li>
+                                    <li><a href="#">Lawan Arus</a></li>
                                 </ul>
                             </div><!-- end list-widget -->
                         </div><!-- end widget -->
